final fix from projects alignment

--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -7,10 +7,7 @@
 }
 
 .navbar {
-  background-color: red !important;
   font-size: $font-size-subtitle;
-  // text-decoration: underline;
-  // font-weight: 500;
   min-height: 8vh;
 
   @include mediaQueryMax(large) {
